# basler-camera-daemon

./: .gitignore  README.md  _main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
docs/: openapi.yaml
docs/plans/: 2026-03-04-refactor-design.md  2026-03-04-refactor-implementation.md  2026-03-04-robustness-design.md  2026-03-04-robustness-implementation.md  2026-03-05-mock-camera-design.md  2026-03-05-mock-camera-implementation.md  2026-03-05-openapi-design.md  2026-03-05-openapi-implementation.md
src/basler_camera_daemon/: __main__.py  camera.py  camera_protocol.py  config.py  encoding.py  hub.py  mock_camera.py  server.py  service_manager.py
src/basler_camera_daemon/static/: viewer.html
tests/: conftest.py  test_config.py  test_encoding.py  test_hub.py  test_mock_camera.py  test_server_shutdown.py
