[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basler-camera-daemon"
version = "0.1.0"
description = "HTTP + WebSocket daemon for Basler cameras"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9",
    "Pillow>=10.0",
    "pypylon>=3.0",
]

[project.optional-dependencies]
dev   = ["ruff", "mypy", "pytest", "pytest-asyncio"]
build = ["pyinstaller"]

[project.scripts]
basler-daemon = "basler_camera_daemon.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/basler_camera_daemon"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
